// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
      <em
        className="mandatory"
      >
        *
      </em>
    </span>
    <HelpTooltip
      className="spacer-left"
      overlay="Help message"
    />
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;

exports[`should render when valid 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
      <em
        className="mandatory"
      >
        *
      </em>
    </span>
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <AlertSuccessIcon
      className="spacer-left text-middle"
    />
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;

exports[`should render with error 1`] = `
<div>
  <label
    htmlFor="field-id"
  >
    <span
      className="text-middle"
    >
      <strong>
        Field label
      </strong>
    </span>
  </label>
  <div
    className="little-spacer-top spacer-bottom"
  >
    <div />
    <AlertErrorIcon
      className="spacer-left text-middle"
    />
    <span
      className="little-spacer-left text-danger text-middle"
    >
      Field error message
    </span>
  </div>
  <div
    className="note abs-width-400"
  >
    My description
  </div>
</div>
`;
